# general_projects

./: 404.html  PROJECTS  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-mkdocs.yml  versioning.yml
DBToolkit/: README.md  pyproject.toml  setup.py
DBToolkit/notebooks/: development_and_test.ipynb
anomaly_detection_test_04/: .pre-commit-config.yaml  README.md  pyproject.toml
anomaly_detection_training_module_v1/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
anomaly_detection_training_module_v1/notebooks/: demo_anomaly_detection_mvp_v1.2.ipynb  demo_anomaly_detection_with_real_data_v3.ipynb  parameters_for_toy_data_experiments.json  test_01.ipynb  toy_data_generator.ipynb
anomaly_detection_training_module_v1/src/anomaly_detection_training_module_v1/: __init__.py
anomaly_detection_with_autoencoders/: README.md  pyproject.toml
anomaly_detection_with_autoencoders_v2/: README.md  pyproject.toml
anomaly_detection_with_autoencoders_v2/notebooks/: toy_data_generator.ipynb
cookiecutter_template/: cookiecutter.json
cookiecutter_template/hooks/: post_gen_project.sh
cookiecutter_template/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
cookiecutter_template_v1/: cookiecutter.json
cookiecutter_template_v1/_templates/: __init__.py  config_path.py  helpers.py  initializer.py
cookiecutter_template_v1/hooks/: post_gen_project.sh
cookiecutter_template_v1/{{cookiecutter.project_name}}/: README.md  pyproject.toml  setup.py
database_generator/: Dockerfile  README.md  docker-compose.yml  parameters_for_toy_data_experiments.json  pyproject.toml  setup.py
database_generator/notebooks/: development_and_test.ipynb  package_demo.ipynb  sqlalchemy_methods.ipynb  sqlalchemy_methods.py  test_01.ipynb  toy_data_generator.ipynb  toy_data_generator.py
database_generator/src/database_generator/: __init__.py  data_generator.py  db_operations.py  evaluate.py  get_data.py  helpers.py  logging_configuration.py  main.py
database_generator/test/: conftest.py  test_data_generator.py  test_get_data.py
database_toolkit/: CHANGELOG.md  README.md  pyproject.toml
database_toolkit/notebooks/: package_demo.ipynb  package_demo.py
database_toolkit/src/database/toolkit/: data_generator.py  logging_configuration.py
database_toolkit/test/: test_data_generator.py
dbtoolkit/: README.md  pyproject.toml  setup.py
dbtoolkit/src/dbtoolkit/: logging_configuration.py
docs/: index.md
docs/guides/: index.md
docs/guides/ai_product_development/: framework_that_embraces_uncertainty.md  overview.md  skateboard_mindset.md  the_moscow_method.md
docs/guides/data_science_and_ai/: clustering_algorithms.md  ds_products_as_python_packages.md  handson_rl_application_ppo.md  k-means_visualization.md  overview.md  reinforcement_learning_basics.md  simulators_for_unlocking_innovation.md  the_neural_network_structure.md
docs/guides/demos/: overview.md
docs/guides/development_and_devops/: introduction_to_dev_container.md  logging_manager_package.md  mkdocs_tutorial.md  overview.md  tdd_tutorial.md  versioning_tutorial.md
docs/guides/projects/: overview.md
docs/guides/software_architecture/: SOLID_principles.md  overview.md
docs/guides/work_with_me/: ai_foundations_and_capability_building.md  ai_systems_that_work.md  overview.md
docs/guides/workflows/: overview.md  the_moscow_method.md
guides/ai_product_development/framework_that_embraces_uncertainty/: index.html
guides/ai_product_development/overview/: index.html
guides/ai_product_development/skateboard_mindset/: index.html
guides/ai_product_development/the_moscow_method/: index.html
guides/data_science_and_ai/clustering_algorithms/: index.html
guides/data_science_and_ai/ds_products_as_python_packages/: index.html
guides/data_science_and_ai/overview/: index.html
guides/software_architecture/: SOLID_principles.md
logger_manager/: CHANGELOG.md  README.md  pyproject.toml
logger_manager/notebooks/: demo_logging_config.ipynb  demo_logging_config.py  test_01.ipynb
logger_manager/src/logger/manager/: logging_config.py
logging_manager/: CHANGELOG.md  README.md  pyproject.toml
logging_manager/notebooks/: test_01.ipynb
ml_forecasting_pipeline/: CHANGELOG.md  README.md  pyproject.toml
ml_forecasting_pipeline/backend/: config.py  main.py
ml_forecasting_pipeline/dags/: retrain_forecasting_model.py
ml_forecasting_pipeline/ui/: index.html
rl_biofilm_optimization/: CHANGELOG.md  README.md  pyproject.toml
rl_biofilm_optimization/action_adapter/: base_action_adapter.py
rl_biofilm_optimization/agent_factory/: base_agent.py
rl_biofilm_optimization/config/: ppo_baseline.yaml
rl_biofilm_optimization/environments/: biofilm_env_wrapper.py  env_loader.py  env_wrapper.py
rl_biofilm_optimization/notebooks/: experiments_v1.py  test_01.ipynb
rl_biofilm_optimization/reward_function/: base_reward.py  reward_shaped_kpi.py
rl_biofilm_optimization/state_builder/: base_state_builder.py  engineered_state.py
rl_biofilm_optimization/visualization/: plot_kpis.py  plot_rewards.py
rl_cstr_optimization/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
rl_cstr_optimization/config/environments/: cstr_environment.yaml
rl_cstr_optimization/notebooks/: debugging_notebook.ipynb  experiments_v1.py  test_01.ipynb  test_01.py
rl_cstr_optimization/src/rl/cstr/optimization/: base_action_adapter.py  base_agent.py  base_state_builder.py  compare_agents.py  env_wrapper.py  evaluate.py  load_config_files.py  train.py  visualization.py
rl_cstr_optimization/test/: test_base_agent.py
search/: search_index.json
simulators_fsm/: CHANGELOG.md  README.md  pyproject.toml
simulators_fsm/notebooks/: simulator_development.ipynb
site/: 404.html  index.html  sitemap.xml
site/guides/: index.html
site/search/: search_index.json
(+34 files in other folders)
