[tool.poetry]
name = "anomaly-detection-training-module-v1"
version = "0.1.0"
description = "Anomaly detection project using autoencoders"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
holoviews = "^1.19.1"
bokeh = "^3.5.1"
jupyter-bokeh = "^4.0.5"
plotly = "^5.23.0"
ipywidgets = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
