[tool.poetry]
name = "simulators_fsm"
version = "0.1.0"
description = "to be done"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "simulators/fsm", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
